Add current stuff that partially works
DAC is currently not fed the data with the matching DAC clock of 10MHz
for testing purposes... that needs to be fixed in MyDMA.

--- a/litex_boards/targets/prog/openocd_nick.cfg
+++ b/litex_boards/targets/prog/openocd_nick.cfg
@@ -15,7 +15,7 @@ transport select jtag
 # custom stuff to flash artix7
 reset_config none
 
-adapter_khz 100000
+adapter_khz 1000000
 ftdi_tdo_sample_edge falling
 source [find cpld/xilinx-xc7.cfg]
 source [find cpld/jtagspi.cfg]
